k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-homelab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-web
  template:
    metadata:
      labels:
        app: flask-web
    spec:
      containers:
      - name: flask-container
        image: k3d-homelab-registry:5111/my-python-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  ports:
  - port: 80        # Port on the LoadBalancer
    targetPort: 80  # Port on your Container
  selector:
    app: flask-web
